# TermiSTL

./: README.md  pyproject.toml  termistl.css  termistl.py
.github/workflows/: python-package.yml
